egonlang-core/res/examples/valid/type_alias_nested.eg
type NumberList = list<number>;
type Alias = NumberList;
type Alias2 = Alias;

let a: Alias2 = [1, 2, 3];