egonlang-core/res/examples/invalid/prefix_expr_negate_list.eg
-[];
-[1, 2, 3];

// out: TypeError: mismatched types: expected type `number` but received `list<unknown>`
// out: TypeError: mismatched types: expected type `number` but received `list<number>`


(): () => { () }